[project]
name = "comfyui-lnl"
description = "Frame Selector & Sequence Selection Node for ComfyUI."
version = "1.1.0"
license = "LICENSE"
dependencies = ["opencv-python~=4.12.0", "imageio-ffmpeg~=0.6.0", "Pillow>=9.1.0"]

[project.urls]
Repository = "https://github.com/LeMouf/ComfyUI-LNL"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "leMouf"
DisplayName = "ComfyUI-LNL"
Icon = ""
